商品一覧機能

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,21 +133,18 @@
             <div class='item-img-content'>
              <%= image_tag item.image, class: "item-img" %>
               <%# 商品が売れていればsold outを表示しましょう %>
-              <%# <% if item.present? %> 
+              <% if item.buyer_management != nil %>
                 <div class='sold-out'>
                   <span>Sold Out!!</span>
-                  <%# <%= item.name%>
-                  <%= item.price%>
                 </div>
-              <%# //商品が売れていればsold outを表示しましょう %>
-              <%# <% end %> 
+              <%end%> 
             </div>
             <div class='item-info'>
               <h3 class='item-name'>
-                <%= "商品名" %>
+                <%= item.item_name %>
               </h3>
               <div class='item-price'>
-                <span><%= "販売価格" %>円<br><%= '配送料負担' %></span>
+                <span><%= item.price  %>円<br><%= item.shipping_charge.name %></span>
                 <div class='star-btn'>
                   <%= image_tag "star.png", class:"star-icon" %>
                   <span class='star-count'>0</span>
